<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globe"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/guess1c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_1_check"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess1" />

    <TextView
        android:id="@+id/guess3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess2c" />

    <TextView
        android:id="@+id/guess2c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_2_check"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess2" />

    <TextView
        android:id="@+id/guess3c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_3_check"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess3" />

    <TextView
        android:id="@+id/guess1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/guess2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess1c" />

    <TextView
        android:id="@+id/input1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/output1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input1" />

    <TextView
        android:id="@+id/input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output1" />

    <TextView
        android:id="@+id/output2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input2" />

    <TextView
        android:id="@+id/input3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output2" />

    <TextView
        android:id="@+id/output3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input3" />

    <Button
        android:id="@+id/guess_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/text_input"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/text_input"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guess_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/text_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>